<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="menu_exit">Exit</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_save_state">Save State</string>
    <string name="menu_load_state">Load State</string>
    <string name="menu_save_state_cloud">Save State to Cloud</string>
    <string name="menu_load_state_cloud">Load State from Cloud</string>
    <string name="load_game">Load Game</string>
    <string name="setting">Settings</string>
    <string name="choose_bios">Choose bios</string>
    <string name="choose_cartridge">Choose cartridge</string>
    <string name="choose_cpu_core">Choose Cpu Core</string>
    <string name="choose_video_core">Choose Video Core</string>
    <string name="audio_output">Audio output</string>
    <string name="fps">FPS</string>
    <string name="lock_landscape">Lock Landscape Mode</string>
    <string name="frameskip">Frameskip</string>
    <string name="keepaspectrate">Keep original aspect rate</string>
    <string name="choose_input_device">Choose input Device</string>
    <string name="input_device_title">Player1 Input Device</string>
    <string name="input_device_title_player2">Player2 Input Device</string>
    <string name="input_device">Choose</string>
    <string name="input_device_setting">Edit Key Map</string>
    <string name="onscrenn_pad_setting">Edit OnScreen Pad</string>
    <string name="nopad">None</string>
    <string name="bios">Bios</string>
    <string name="cartridge">Cartridge</string>
    <string name="cpu_core">Cpu Core</string>
    <string name="video_core">Video Core</string>
    <string name="setting_sound">Sound</string>
    <string name="setting_graphics">Graphics</string>
    <string name="setting_general">General</string>
    <string name="msg_opengl_not_supported">Your device is not support OpenGL ES 3.0 or above.\nYou can not choose OpenGL Video Interface.\n</string>
    <string name="skip">Skip</string>
    <string name="donation">Support</string>
    <string name="donate_message">
        Support our development! \n\n
        You can support the upstream project of Yaba Sanshiro by making a donation directly on their website http://yabause.org.
        You can also support this project Yaba Sanshiro by clicking the donate button below, this will help towards development of more accurate emulation, input devices and a wider range of devices.
        This screen and advertisement screen will not be shown, If you have donated.
    </string>
    <string name="thank_you">Thank you for your donation!</string>
    <string name="error_consume">Failed to consume.</string>
    <string name="do_donation">Donate</string>
    <string name="no_thank_you">No, Thank you.</string>
    <string name="donate_3doller">$3</string>
    <string name="donate_5doller">$5</string>
    <string name="donate_10doller">$10</string>
    <string name="donate_30doller">$30</string>
    <string name="input_the_key">Input the Key</string>
    <string name="joystick_is_not_connected">Joypad is not connected.</string>
    <string name="this_key_has_already_been_set">This Key has already been set.</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="axis_x">Analog X</string>
    <string name="axis_y">Analog Y</string>
    <string name="axis_l">Analog L Trigger</string>
    <string name="axis_r">Analog R Trigger</string>
    <string name="l_trigger">L Trigger</string>
    <string name="r_trigger">R Trigger</string>
    <string name="start">Start</string>
    <string name="a_button">A</string>
    <string name="b_button">B</string>
    <string name="c_button">C</string>
    <string name="x_button">X</string>
    <string name="y_button">Y</string>
    <string name="z_button">Z</string>
    <string name="menu">Menu</string>
    <string name="scale">Scale</string>
    <string name="transparency">Transparency</string>
    <string name="do_you_want_to_save_this_setting">Do you want to save this setting?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit">Exit</string>
    <string name="ignore">Ignore</string>
    <string name="new_dynrec_cpu_interface">New Dynamic Recompiler(faster than Interpreter. more accurate than Old Dynamic Recompiler)</string>
    <string name="dynrec_cpu_interface">Old Dynamic Recompiler(fast but less accurate)</string>
    <string name="software_cpu_interface">Interpreter(slow but more accurate)</string>
    <string name="opengl_video_interface">OpenGL ES 3.1</string>
    <string name="software_video_interface">Software</string>
    <string name="vulkan_video_interface">Vulkan</string>
    <string name="onscreen_pad">On-Screen Pad</string>
    <string name="select_from_other_directory">Select from other directory.</string>
    <string name="menu_save_screenshot">ScreenShot</string>
    <string name="menu_report">Report</string>
    <string name="video_filter">Filter</string>
    <string name="choose_video_filter">Choose Video Filter</string>
    <string name="video_filter_none">None</string>
    <string name="video_filter_fxaa">FXAA</string>
    <string name="video_filter_scanline">Scanline</string>
    <string name="video_filter_bilinear">Bilinear(Enables only when Native resolution is not selected)</string>
    <string name="browse_title"><![CDATA[Videos by Your Company]]></string>
    <string name="related_movies">Related Videos</string>
    <string name="vertical_grid_title"><![CDATA[Vertical Video Grid]]></string>
    <string name="delete_confirm">"Are you sure want to delete this item?"</string>
    <string name="error">Error</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="init_text">00:00</string>
    <string name="play_pause_description">Play Pause Button</string>
    <string name="loading">Loading&#8230;</string>
    <string name="no_video_found">No video was found</string>
    <string name="about_app">About DemoCast Player</string>
    <string name="version">Version: %1$s</string>
    <string name="popular_header">Popular Videos</string>
    <string name="preferences">PREFERENCES</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="refresh_db">Refresh Game List</string>
    <string name="select_bk_image">Select Background Image</string>
    <string name="video_error_media_load_timeout">Media loading timed out</string>
    <string name="video_error_server_inaccessible">Media server was not reachable</string>
    <string name="video_error_unknown_error">Failed to load video</string>
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="oops">Oops</string>
    <string name="title_activity_game_select" translatable="false">Yaba Sanshiro</string>
    <string name="polygon_generation_type">Polygon Generation Type</string>
    <string name="choose_polygon_generation_type">Choose Polygon Generation type</string>
    <string name="sound_engine">Sound Engine</string>
    <string name="choose_sound_engine">Choose sound engine</string>
    <string name="invitation_title">Send App Invite uoYabause</string>
    <string name="invitation_message">Play SEGA Saturn games using this app!</string>
    <string name="invitation_deep_link" translatable="false">https://b472u.app.goo.gl/YJ5F</string>
    <string name="invitation_custom_image" translatable="false">https://lh3.googleusercontent.com/orp-j3lNGj24xvfVBEQvwWyaVhOQ_aTGc0nwIInDXBlNGUnSOdB_hb8sPGSmgmd0Jvkx=h310-rw</string>
    <string name="invitation_cta">Install!</string>
    <string name="invite">Introduce</string>
    <string name="invite_message">Would you like to introduce this app?</string>
    <string name="video_resolution">Rendering Resolution</string>
    <string name="video_aspect_ratio">Aspect Ratio</string>
    <string name="rbg_resolution">RBG Resolution</string>
    <string name="choose_video_resolution">Choose rendering resolution</string>
    <string name="choose_video_aspect_ratio">Choose rendering aspect ratio</string>
    <string name="choose_rbg_resolution">Choose RBG(Rotate Background) Screen Resolution</string>
    <string name="open_cd_tray">Open CD Tray</string>
    <string name="close_cd_tray">Close CD Tray</string>
    <string name="menu_analog">Enable Analog Control</string>
    <string name="menu_set_as_gametitle">Set As Title Icon</string>
    <string name="add_new_code">Add New Code</string>
    <string name="str_use_compute_shader">Use Compute Shader</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="select_game_directory">Select Game Directory</string>
    <string name="add_dir">Add</string>
    <string name="sound_curent">Current(High quality version for high-end devices)</string>
    <string name="sound_legacy">Legacy(for low-end devices)</string>
    <string name="res_native">Native(native resolution of this android device)</string>
    <string name="res_1080p">1080p</string>
    <string name="res_720p">720p</string>
    <string name="res_4x">4x</string>
    <string name="res_2x">2x</string>
    <string name="res_original">Original</string>
    <string name="ar_original">Original</string>
    <string name="res_4p3">4:3</string>
    <string name="res_16p9">16:9</string>
    <string name="res_full_screen">Full screen</string>
    <string name="poly_triangle">Triangle using perspective correction</string>
    <string name="poly_cpu_tess">CPU Tessellation</string>
    <string name="poly_gpu_tess">GPU Tessellation</string>
    <string name="menu_load">Load</string>
    <string name="menu_delete">Delete</string>
    <string name="title_activity_iso_download">IsoDownload</string>
    <string name="download_to">Download to ..</string>
    <string name="choose_download_to">Download to ..</string>
    <string name="internal">Internal Storage</string>
    <string name="external">SD card</string>
    <string name="network_error">Network error.</string>
    <string name="server_is_not_found">Server is not found or not accessible.</string>
    <string name="server_error">Server error.</string>
    <string name="unable_to_process_file_for_md5">Unable to process file for MD5</string>
    <string name="downloading_cd_rom">Downloading CD-ROM</string>
    <string name="downloading">Downloading</string>
    <string name="finished">Download Finished!</string>
    <string name="failed">Download Failed</string>
    <string name="canceled">Download Cancelled</string>
    <string name="serching_for_a_server">Searching for a server..</string>
    <string name="waiting_for_reading">Waiting for reading to finish.</string>
    <string name="checking_file">Checking file.</string>
    <string name="download_file_is_broken">Download file is broken.</string>
    <string name="you_need_wifi_connection">You need Wifi connection.</string>
    <string name="free_space">Free space</string>
    <string name="no_enough_free_space">You don\'t have enough free space.</string>
    <string name="memory_manager">Memory Manager</string>
    <string name="sign_in">Sign in</string>
    <string name="str_rotate_screen">90 degree rotation</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="show_fps">Show FPS</string>
    <string name="enable_frame_skip">Enable Frame skip</string>
    <string name="game_setting">Game Setting</string>
    <string name="frameLimit">Speed Limit</string>
    <string name="chooseFrameLimit">Choose frame limit mode</string>
</resources>