<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    
    <PreferenceCategory android:title="@string/setting_general">
        <ListPreference
            android:key="pref_bios"
            android:title="@string/bios"
            android:dialogTitle="@string/choose_bios" />

        <ListPreference
            android:key="pref_cart"
            android:title="@string/cartridge"
            android:dialogTitle="@string/choose_cartridge" />

        <ListPreference
            android:key="pref_cpu"
            android:title="@string/cpu_core"
            android:dialogTitle="@string/choose_cpu_core"
            android:entries="@array/entries_cpu_list_preference"
            android:entryValues="@array/entryvalues_cpu_list_preference"
            android:defaultValue="2" />
	</PreferenceCategory>


	<PreferenceCategory android:title="@string/setting_graphics">        

        <ListPreference
              android:key="pref_video"
              android:title="@string/video_core"
              android:dialogTitle="@string/choose_video_core"
              android:defaultValue="1" />
 
        <CheckBoxPreference
            android:key="pref_fps"
            android:title="@string/fps"
            android:defaultValue="false" />
        
        <CheckBoxPreference
            android:key="pref_frameskip"
            android:title="@string/frameskip"
            android:defaultValue="true" />
        
        <CheckBoxPreference
            android:key="pref_keepaspectrate"
            android:title="@string/keepaspectrate"
            android:defaultValue="true" />
        
     </PreferenceCategory>        
    
    <PreferenceCategory android:title="@string/input_device_title">
        <ListPreference
              android:key="pref_player1_inputdevice"
              android:title="@string/input_device"
              android:dialogTitle="@string/choose_input_device"
              android:defaultValue="65535" />        
      
        <org.uoyabause.android.InputSettingPrefernce
            android:key="pref_inputdef_file"
            android:title="@string/input_device_setting"
            android:summary="" />
        
        <PreferenceScreen 
            android:summary=""
            android:title="@string/onscrenn_pad_setting"
            android:key="on_screen_pad">
        </PreferenceScreen>
                
                
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/input_device_title_player2">
                
        <ListPreference
              android:key="pref_player2_inputdevice"
              android:title="@string/input_device"
              android:dialogTitle="@string/choose_input_device"
              android:defaultValue="65535" />        
      
        <org.uoyabause.android.InputSettingPrefernce
            android:key="pref_player2_inputdef_file"
            android:title="@string/input_device_setting"
            android:summary="" />
                
    </PreferenceCategory>    

    
    <PreferenceCategory android:title="@string/setting_sound">
                <CheckBoxPreference
            android:key="pref_audio"
            android:title="@string/audio_output"
            android:defaultValue="true" />
    </PreferenceCategory>    
        

</PreferenceScreen>
