<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <TableRow>
<!-- 
    <Button
        android:onClick="onPadTest"
        android:text="Padtest" />
        </TableRow>
        <TableRow>
 -->            
            
    <Button
        android:onClick="onLoadGame"
        android:text="@string/load_game" />

        </TableRow>
        <TableRow>

    <Button
        android:onClick="onSettings"
        android:text="@string/setting" />
        
        </TableRow>
        <TableRow>

    <Button
        android:onClick="onDonate"
        android:text="@string/donation" />
        
    </TableRow>
    </TableLayout>
        
</RelativeLayout>
