<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
 
        <ImageView android:src="@drawable/wait" android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:id="@+id/screen_wait" android:layout_gravity="center" android:visibility="gone" />
    
        
    <LinearLayout 
        
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/screen_main"
        android:visibility="visible"
        android:orientation="vertical"
		android:layout_margin="30dp">
    
	    <TextView
	        android:id="@+id/test1"
	        android:textSize="20sp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:autoLink="web"
	        android:text="@string/donate_message" >
	    </TextView>
    	<LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:gravity="center"
	        android:orientation="horizontal"
	    >
		<Spinner android:id="@+id/Spinner01"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content">
	    </Spinner>
    	
    	<Button
        	android:onClick="onDonate"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"        	
        	android:text="@string/do_donation" />
        	
    	<Button
        	android:onClick="onDoNotDonate"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"        	
        	android:text="@string/no_thank_you" />
    	 </LinearLayout>   	
    </LinearLayout>
    
</FrameLayout>
